# ny_next-tauri

./: .gitignore  Dockerfile  build.sh  bun.lockb  next.config.ts  package.json
.circleci/: config.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
